Fixed cors bug, changed notes definitions, added filtering, added icons.
